# OpenCraft

./: .gitignore  CMakeLists.txt  OpenCraft.cpp  README.md
Engine/Audio/: Audio.cpp  Audio.hpp
Engine/Core/: IWorldReader.hpp  Math.cpp  Math.hpp  Physics.cpp  Physics.hpp  Types.cpp  Types.hpp
Engine/Input/: Input.cpp  Input.hpp
Engine/Render/: OutlineRenderer.cpp  OutlineRenderer.hpp  ParticleRenderer.cpp  ParticleRenderer.hpp  Shader.cpp  Shader.hpp
Game/Player/: Camera.cpp  Camera.hpp  Physics.hpp  Raycaster.cpp  Raycaster.hpp
Game/UI/: HUD.cpp  HUD.hpp
Game/World/: Block.cpp  Block.hpp  MeshBuilder.cpp  MeshBuilder.hpp  Particle.cpp  Particle.hpp  World.cpp  World.hpp
gl_shaders/: hud.frag  hud.vert  outline.frag  outline.vert  particle.frag  particle.vert  triangle.frag  triangle.vert  world.frag  world.vert
